@@ -18,16 +18,18 @@ my %WriteMakefileArgs = (
   "NAME" => "Bot::IRC::X::ManagementSpeak",
   "PREREQ_PM" => {
     "Lingua::ManagementSpeak" => 0,
-    "strict" => 0,
-    "warnings" => 0
+    "exact" => 0
   },
   "TEST_REQUIRES" => {
+    "Bot::IRC" => 0,
+    "Bot::IRC::Store" => 0,
     "File::Spec" => 0,
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
+    "Test2::V0" => 0,
     "Test::More" => 0,
-    "Test::Most" => 0,
-    "constant" => 0
+    "strict" => 0,
+    "warnings" => 0
   },
   "VERSION" => "1.02",
   "test" => {
@@ -37,13 +39,15 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Bot::IRC" => 0,
+  "Bot::IRC::Store" => 0,
   "File::Spec" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
   "Lingua::ManagementSpeak" => 0,
+  "Test2::V0" => 0,
   "Test::More" => 0,
-  "Test::Most" => 0,
-  "constant" => 0,
+  "exact" => 0,
   "strict" => 0,
   "warnings" => 0
 );
