@@ -2,8 +2,7 @@ package Bot::IRC::X::ManagementSpeak;
 # ABSTRACT: Bot::IRC plugin for rendering management-speak
 
 use 5.014;
-use strict;
-use warnings;
+use exact;
 
 use Lingua::ManagementSpeak;
 
